namespace java com.message.thrift.actor.grid

struct EneterGrid{
    1:string userId;
}

struct LeaveGrid{
    1:string userId;
}


